<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.ahanafi.id.cataloguearchitecturecomp.ui.movie.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movie"
        />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.ahanafi.id.cataloguearchitecturecomp.ui.tvshow.TvShowFragment"
        android:label="@string/text_tvshow"
        tools:layout="@layout/fragment_tv_show"/>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.ahanafi.id.cataloguearchitecturecomp.ui.favorite.FavoriteFragment"
        android:label="@string/text_favorite"
        tools:layout="@layout/fragment_favorite"/>
</navigation>