<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/roundcorner"
            card_view:corner_radius="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_item_photo"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster_image"
                android:background="@drawable/img_bg_card"
                />
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

        <TextView
            android:layout_toEndOf="@id/roundcorner"
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/movie_title"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/roundcorner"
            android:id="@+id/tv_item_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:drawableStart="@drawable/ic_calendar"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_toEndOf="@id/roundcorner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_release"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="4dp"
            android:text="@string/overview"
            android:ellipsize="end"
            android:maxLines="3"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>